@@ -14,6 +14,8 @@ Version 12     Live Server Fixes
 
 --Added entry fee and prize pool display to tournament prize list.
 
+--Fixed active users graph to filter out duplicates.
+
 
 
 
